<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_24dp"
                android:title="@string/menu_home" />

            <item
                android:id="@+id/nav_services"
                android:icon="@drawable/ic_cars_repair_24"
                android:title="@string/menu_services" />

        </group>

<!--        <group android:checkableBehavior="single">-->

<!--            <item android:title="Services">-->

<!--                <menu>-->

<!--                    <group android:checkableBehavior="single">-->

<!--                        <item-->
<!--                            android:id="@+id/nav_indiSer"-->
<!--                            android:icon="@drawable/ic_menu_gallery"-->
<!--                            android:title="@string/menu_indiSer" />-->
<!--                        <item-->
<!--                            android:id="@+id/nav_combSer"-->
<!--                            android:icon="@drawable/ic_menu_gallery"-->
<!--                            android:title="@string/menu_combSer" />-->

<!--                    </group>-->

<!--                </menu>-->
<!--            </item>-->

<!--        </group>-->

        <group android:checkableBehavior="single">

            <item android:title="Entities">

                <menu>

                    <group android:checkableBehavior="single">

                        <item
                            android:id="@+id/nav_clients"
                            android:icon="@drawable/ic_person_24"
                            android:title="@string/menu_clients" />
                        <item
                            android:id="@+id/nav_workshops"
                            android:icon="@drawable/ic_workshop_24"
                            android:title="@string/menu_workshops" />
                        <item
                            android:id="@+id/nav_vehicles"
                            android:icon="@drawable/ic_cars_24"
                            android:title="@string/menu_vehicles" />

                    </group>

                </menu>
            </item>

        </group>

        <group android:checkableBehavior="single">

            <item android:title="Bookings">

                <menu>

                    <group android:checkableBehavior="single">

                        <item
                            android:id="@+id/nav_bookings"
                            android:icon="@drawable/ic_bookings_24"
                            android:title="@string/menu_bookings" />
                        <item
                            android:id="@+id/nav_rejBookings"
                            android:icon="@drawable/ic_bookings_24"
                            android:title="@string/menu_rejBookings" />
                    </group>

                </menu>
            </item>

        </group>
    </group>

</menu>